--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-products> </app-products>
+<h1>My Cool App</h1>
+<a routerLink="/">
+  Home Page
+</a>
+<a routerLink="/products">Products Page</a>
+<router-outlet></router-outlet>
